# mimic

./: CHANGES.md  Cargo.toml  README.md  example.echo
src/: error.rs  lib.rs  main.rs
src/parser/: error.rs  instruction.rs  lexer.rs  mod.rs  parse.rs  token.rs
src/templates/: error.aml  index.aml
src/ui/: audio.rs  compile.rs  context.rs  document.rs  editor.rs  instructions.rs  mod.rs  syntax.rs  textbuffer.rs
